See if github prefers this way of headers

--- a/20171228-2017_review.md
+++ b/20171228-2017_review.md
@@ -2,37 +2,47 @@
 title: 2017 Review
 date: 31st December 2017
 ---
+
 So it’s time for my basically yearly blog post summing up how the year went for me. I guess to sum it up in a word it would be spontaneous.
 
-###Spontaneous Action 1: Going to Japan for 5days in January to see Dempagumi.inc at Budokan###
+### Spontaneous Action 1: Going to Japan for 5days in January to see Dempagumi.inc at Budokan
+
 So yeah this was a thing I decided back at the end of November in 2016 when I had just got back from Momoclo in New York City and my amazing friend Karen mentioned that Dempagumi added an extra show to their tour for Budokan. I had always said if my groups did a Budokan show I would go as it is such a special place and so I had to make it there. Luck was in my favour with cheap flights & accomodation available so I booked the trip and with Karen’s help got the tickets and we went together. Over the 5 days I spent there we explored Shibuya (& I explored a bit more for goods) went to a multiple Idol concert at Shibuya Eggman that had some of my top groups of 2017, Uijin & Zenkimi with bonus Muzubism (RIPP), DisneyLand funtimes and of course spending the day at Budokan meeting the JP Wota of Keitaro, Hong Kong, Merukosu & Nikak again. I spent the day with Shaun & Vicki  too which was a blast getting merch. The concert itself was super emotional, especially given the context it was Moga’s last show and the group’s last live for just under a year. The off-kai after though was a blast and gutted I couldn’t stay longer as my flight left the day after.
 
-###Spontaneous Action 2: JapanExpo and becoming the Ao T-O###
+### Spontaneous Action 2: JapanExpo and becoming the Ao TO
+
 So this was the year I finally decided to visit JapanExpo in France after a few years of wanting to go (LOOKING AT YOU 2015). For this year the main idol groups were WaSuta & Nijicon. I knew of WaSuta a bit but Nijicon were kinda unknown for me. Karen showed me some videos of the wotagei and I was pretty hooked. I was split on who to support between Ao & Moe but with Moe getting there the day after I could only support Ao on the first day. The thing is though, I spent like €70 on just Ao and at that point it’s too late to switch. So the following days I just did a few rounds of phone photos with just Ao. We also kept running into Nijicon where ever we went. On the final day they were doing signings I managed to secure a ticket but Karen didn’t which upset her a lot. However Nijicon (& their staff) being the bosses they are, talked JapanExpo staff into letting her get stuff signed. The reason, they gave me and her some cardboard that they had been using to announce things, these were also signed by all the members too and also had funny drawings and comments. It was absolutely amazing and touching to be known by the group and Moe acknowledged me as the Ao T-O, so that was that!
 
 Aside from the Nijicon stuff, WaSuta was nice to see. Got a new penlight and had it signed by them and also got a Snapback signed by Nanase. Also notall were there but didn’t really check them out too much aside from ironically hard wotagei-ing with Karen and Elle at the back of the venue which notall noticed!
 
-###Not Spontaneous But Worth Mentioning 1: HyperJapan Summer###
+### Not Spontaneous But Worth Mentioning 1: HyperJapan Summer
+
 Hyper Japan suprised me and brought over Moso Calibration who I really enjoyed seeing. I ended up getting like 6 CDs for chekis but only got like 4 chekis/handshakes as I kept sharing out my tickets as people/families would queue up without knowing you had to buy the CDs to get tickets and then rather than feel bad or causing a scene I’d rather they enjoy it so I’d give them my tickets. Hopefully it gives a good impression of Idol Fans in the UK and they like the group too. I met some real awesome JP Wota (who also payed the favour back to me later on) and him tweeting a picture of me to Gumi got a reply back to him which was awesome! As for the event itself, Moso were super! Did a good range of old and new songs, a lot of fun!
 
 To add to this part, big up the UK Wota crew (well LondonCrew anyway). Thanks to Karen (& The Hoopers at JapanExpo) I got to meet a ton of new people from London who also like Idols. Got to know them a bit more at HyperJapan and later on at the following HyperJapan. I guess big shout outs to Cherry, Kishi, George(Hatokis) and the many more I’ve missed.
 
-###No Gym, Only Badminton###
+### No Gym, Only Badminton
+
 As title says, I spent the wednesdays during summer playing Badminton which was good exercise and also took up parkrunning. I’d kinda stopped going to the Gym because I didn’t really want to go after work and going at weekends is annoying. I’m still paying for it, maybe I’ll start again in the new year. As for Badminton though I stopped going in September as I’ve started my Japanese Course again which happens at the same time unfortunately. I’ve also stopped Parkrunning, I enjoyed it but similar to Gym, going at that time is annoying and in winter it’s not fun to run in bad weather. Hopefully I can get back into getting fitter for the next year.
 
-###Spontaneous Action 3: Going to Japan for 6days for Ao###
+### Spontaneous Action 3: Going to Japan for 6days for Ao
+
 I missed going to TIF especially since I had friends (Cherry/Kishi) who were there and so I was miserable. Then a deal popped up I think and I ended up booking it for the end of August. This co-incided with @JAM and Nijicon release events which was a big plus. Thankfully I had mostly cleared my credit card and got paid bonus in August so I took a small budget of like 89,400¥ which barely covered me. First off I spend like 20k of that on Ao chekis which I got signed this time. Then there was Lyrical School goods for Risano cheki, Uijin goods for Hitochibi chekis, Tograren chekis, Mogra Entry for Shiorin chekis, Gumi chekis and random Trio purchases. In addition to those I met up with Rob who is a Shirorin oshi from US and we went for a meal in Shibuya and ended up taking me to the Yuzu birthday event which I totally wasn’t expecting to go to. I had to hightale it from there when it finished though as Ao was on a radio show so wanted to be there for that and just about caught the end of that. Also had a lovely day of just doing nothing, walked for a bit and then spent a few hours in the afternoon to evening by the river. It was certainly an experience this trip and it felt like I was living there with the release events and such.
 
-###Not Spontaneous But Worth Mentioning 2: I Booked Another Trip to Japan with Friends
+### Not Spontaneous But Worth Mentioning 2: I Booked Another Trip to Japan with Friends
+
 So a friend of mine Sam, had always wanted to go Japan with me after my constant trips. I wanted to make sure I was there for next August to catch TIF as I wasn’t missing that again. And in September a deal popped up for cheapish flights for 2 people over the time we wanted which’ll be late July to Early August. TIF was later confirmed for the first weekend in August as usual so that’s sorted! However since Sam was coming with me it would be more of a sightseeing trip rather than purely idol/music shows. We fly from Paris to Tokyo via Moscow and then get the bullet train straight to Osaka where we’ll start our trip and then gradually make our way back to Tokyo in time for TIF stopping at Kyoto and Nagoya on the way. A few weeks after we booked it, another friend Zac asked if he could tag along as he wanted to go anywhere and felt like he wouldn’t go to Japan unless it was with people. So yeah, that’s sorted!
 
-###Spontaneous Action 4: I Booked Yet Another Trip to Japan a Month After the Previous One###
+### Spontaneous Action 4: I Booked Yet Another Trip to Japan a Month After the Previous One
+
 So in addition to booking the above trip yet *another* cheap flight appeared, this time for September and over my birthday. I mentioned it to a guy at work who had been wanting to go for a while and I ended up booking it so that’s another 10 day trip during the middle of September I’m doing. It’s very similar in dates to my first trip to Japan back in 2014 so hoping things like the Kishidan Banpaku will be a thing still. Aside from that I’m not entirely sure what I’ll be doing. Hopefully concerts show up but I’m happy to just lounge around for this one most likely. Maybe meet up with the work guy since he booked it aswell but is getting there a couple of days earlier.
 
-###Not Spontaneous But Worth Mentioning 3: HyperJapan Winter###
+### Not Spontaneous But Worth Mentioning 3: HyperJapan Winter
+
 For this event, there wasn’t really any groups I was too interested in. FEMM were real good and there were some idol competition winners who suprised me but aside from that it wasn’t really my scene with the punk and metal bands. Instead I spent most of my time at the Street Live stage where UKWota Crew were doing some performing of their own. Cherry did a really awesome IDOLM@STER cover set on the Friday, there was a nice band on Saturday Afternoon, followed by M.O.E doing an event, Cherry+Hatokis+Others doing more dance covers and lastly a BiSH set from Kishi+Hatokis which were all dope! I originally wasn’t going to go Friday but did for Cherry’s set and then Cherry said to go Sunday so I went anyway so HyperJapan got their full monies worth out of me. For the event itself it was fun, friends made it great though. Sucks it’s a while til next con!
 
-###In Summary###
+### In Summary
+
 So yeah, pretty spontaneous and I’ve really enjoyed this year as a whole. I’ve expanded my friend group a lot, twitter is a much more talkative place now which is nice. I hope I can be as more spontaneous next year and hopefully get some things in place to improve general wellbeing like going to a gym again, seeing a hypnotherapist to attempt to fix my eating habits and to get into a study regime for Japanese. I hope I can achieve these and make everyone around me happy to know me!
 
 Peaceee
